[package]
name = "jump4cake"
version = "0.1.0"
authors = ["Jacob Hrbek <kreyren@rixotstudio.cz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# An Excel/OpenDocument Spreadsheets file reader/deserializer, in pure Rust.
#calamine = "0.16.1"
# Library to read and write xls or ods files
# We are using path, because the library doesn't have expected features (and to be contributed)
spsheet = { path = "src/crates/spsheet-rs", version = "0.1.0", features = ["ods"] }